# flask-faker-sales-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: client.py
src/app/: app.py  processing.py
src/app/database/: redis_client.py
src/app/model/: model.py
