[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["Rhanyele Marinho <rhany.marinho@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
faker = "^25.8.0"
datetime = "^5.5"
pydantic = "^2.7.4"
logging = "^0.4.9.6"
redis = "^5.0.6"
flasgger = "^0.9.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
